syntax = "proto3";
package com.example.payment;

option java_multiple_files = true;

service PeriodPaymentService {
  rpc getPeriodPayment (PeriodPaymentRequest) returns (PeriodPaymentResponse) {}
}

message PeriodPaymentRequest {
  string user_id = 1;
  int32 loan_term = 2;
  float disbursement_amount = 3;
  float origination_amount = 4;
  float interest = 5;
  string product_code = 6;
  string product_version = 7;
}

message PeriodPaymentResponse {
  int32 period_payment = 1;
}
